[tool.poetry]
name = "hashicorp_bitwarden-vault-scripts"
version = "0.1.0"
description = "Scripts for managing Hashicorp Vault with Bitwarden secrets."
authors = ["Eugene Davis <eugene@eugenemdavis.net>"]
license = "GPLv3"
readme = "README.md"


packages = [
    { include = "hashicorp_bitwarden_vault_scripts" },
]

[tool.poetry.scripts]
unseal-vault-replicas = 'hashicorp_bitwarden_vault_scripts.scripts.unseal_vault_replicas:cli_main'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
kubernetes = "^24.2.0"
hvac = "^1.0.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
